--- a/JiuCaiTong2.0(Swift)/Base.lproj/Main.storyboard
+++ b/JiuCaiTong2.0(Swift)/Base.lproj/Main.storyboard
@@ -29,11 +29,11 @@
             </objects>
             <point key="canvasLocation" x="284" y="-197"/>
         </scene>
-        <!--Item-->
+        <!--出借-->
         <scene sceneID="8j6-AB-5YJ">
             <objects>
                 <navigationController id="6NN-sd-Oh4" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" id="LdD-li-LP1"/>
+                    <tabBarItem key="tabBarItem" title="出借" image="Investment" selectedImage="Investment_2" id="LdD-li-LP1"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="F72-uT-9p7">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -46,11 +46,11 @@
             </objects>
             <point key="canvasLocation" x="119" y="723"/>
         </scene>
-        <!--Item-->
+        <!--发现-->
         <scene sceneID="nlB-uv-ssd">
             <objects>
                 <navigationController id="u6J-cs-Hl7" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" id="W6h-2f-aQT"/>
+                    <tabBarItem key="tabBarItem" title="发现" image="find" selectedImage="find_2" id="W6h-2f-aQT"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="hvr-1h-I66">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -63,11 +63,11 @@
             </objects>
             <point key="canvasLocation" x="982" y="724"/>
         </scene>
-        <!--Item-->
+        <!--我的-->
         <scene sceneID="Rdu-vn-Gil">
             <objects>
                 <navigationController id="zu1-tB-nOl" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" id="oaZ-Hp-OCC"/>
+                    <tabBarItem key="tabBarItem" title="我的" image="My" selectedImage="My_2" id="oaZ-Hp-OCC"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="BUV-JK-IYF">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -80,11 +80,11 @@
             </objects>
             <point key="canvasLocation" x="1970" y="724"/>
         </scene>
-        <!--Item-->
+        <!--首页-->
         <scene sceneID="m59-Pq-CMW">
             <objects>
                 <navigationController id="yJj-N3-C8c" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" id="TEG-Kp-ui8"/>
+                    <tabBarItem key="tabBarItem" title="首页" image="Home" selectedImage="Home_2" id="TEG-Kp-ui8"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="R7J-v0-kEO">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -174,4 +174,14 @@
             <point key="canvasLocation" x="2102" y="1652"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Home" width="23" height="23"/>
+        <image name="Home_2" width="23" height="23"/>
+        <image name="Investment" width="23" height="23"/>
+        <image name="Investment_2" width="23" height="23"/>
+        <image name="My" width="23" height="23"/>
+        <image name="My_2" width="23" height="23"/>
+        <image name="find" width="23" height="23"/>
+        <image name="find_2" width="23" height="23"/>
+    </resources>
 </document>
