--- a/JiuCaiTong2.0(Swift)/Base.lproj/Main.storyboard
+++ b/JiuCaiTong2.0(Swift)/Base.lproj/Main.storyboard
@@ -9,10 +9,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Tab Bar Controller-->
+        <!--My Tab Bar View Controller-->
         <scene sceneID="oI0-HG-KrI">
             <objects>
-                <tabBarController id="Y4n-G8-KWA" sceneMemberID="viewController">
+                <tabBarController id="Y4n-G8-KWA" customClass="MyTabBarViewController" customModule="JiuCaiTong2_0_Swift_" customModuleProvider="target" sceneMemberID="viewController">
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="HiH-Tk-W7E">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -32,7 +32,7 @@
         <!--出借-->
         <scene sceneID="8j6-AB-5YJ">
             <objects>
-                <navigationController id="6NN-sd-Oh4" sceneMemberID="viewController">
+                <navigationController id="6NN-sd-Oh4" customClass="MyNavigationViewController" customModule="JiuCaiTong2_0_Swift_" customModuleProvider="target" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="出借" image="Investment" selectedImage="Investment_2" id="LdD-li-LP1"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="F72-uT-9p7">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
@@ -49,7 +49,7 @@
         <!--发现-->
         <scene sceneID="nlB-uv-ssd">
             <objects>
-                <navigationController id="u6J-cs-Hl7" sceneMemberID="viewController">
+                <navigationController id="u6J-cs-Hl7" customClass="MyNavigationViewController" customModule="JiuCaiTong2_0_Swift_" customModuleProvider="target" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="发现" image="find" selectedImage="find_2" id="W6h-2f-aQT"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="hvr-1h-I66">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
@@ -66,7 +66,7 @@
         <!--我的-->
         <scene sceneID="Rdu-vn-Gil">
             <objects>
-                <navigationController id="zu1-tB-nOl" sceneMemberID="viewController">
+                <navigationController id="zu1-tB-nOl" customClass="MyNavigationViewController" customModule="JiuCaiTong2_0_Swift_" customModuleProvider="target" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="我的" image="My" selectedImage="My_2" id="oaZ-Hp-OCC"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="BUV-JK-IYF">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
@@ -83,7 +83,7 @@
         <!--首页-->
         <scene sceneID="m59-Pq-CMW">
             <objects>
-                <navigationController id="yJj-N3-C8c" sceneMemberID="viewController">
+                <navigationController id="yJj-N3-C8c" customClass="MyNavigationViewController" customModule="JiuCaiTong2_0_Swift_" customModuleProvider="target" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="首页" image="Home" selectedImage="Home_2" id="TEG-Kp-ui8"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="R7J-v0-kEO">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
@@ -97,10 +97,10 @@
             </objects>
             <point key="canvasLocation" x="-834" y="723"/>
         </scene>
-        <!--View Controller-->
+        <!--Home View Controller-->
         <scene sceneID="LEG-W3-eJv">
             <objects>
-                <viewController id="pac-NY-PYT" sceneMemberID="viewController">
+                <viewController id="pac-NY-PYT" customClass="HomeViewController" customModule="JiuCaiTong2_0_Swift_" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="DJ4-K4-Ap8"/>
                         <viewControllerLayoutGuide type="bottom" id="LoO-8D-XRc"/>
@@ -110,16 +110,16 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" red="1" green="0.36488527669999998" blue="0.2240839744" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </view>
-                    <navigationItem key="navigationItem" id="Kgf-l5-pO9"/>
+                    <navigationItem key="navigationItem" id="Kgf-l5-pO9" customClass="Home"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gKh-iB-HCi" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-817" y="1618"/>
         </scene>
-        <!--View Controller-->
+        <!--Invest View Controller-->
         <scene sceneID="92e-0V-MaM">
             <objects>
-                <viewController id="mgo-2X-rq5" sceneMemberID="viewController">
+                <viewController id="mgo-2X-rq5" customClass="InvestViewController" customModule="JiuCaiTong2_0_Swift_" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="FEd-Lh-0ha"/>
                         <viewControllerLayoutGuide type="bottom" id="eHw-w7-mHs"/>
@@ -135,10 +135,10 @@
             </objects>
             <point key="canvasLocation" x="201" y="1629"/>
         </scene>
-        <!--View Controller-->
+        <!--Find View Controller-->
         <scene sceneID="lgM-9i-gHv">
             <objects>
-                <viewController id="zA5-R9-aTZ" sceneMemberID="viewController">
+                <viewController id="zA5-R9-aTZ" customClass="FindViewController" customModule="JiuCaiTong2_0_Swift_" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="gcv-U5-wri"/>
                         <viewControllerLayoutGuide type="bottom" id="NOX-dV-Gxl"/>
@@ -154,10 +154,10 @@
             </objects>
             <point key="canvasLocation" x="1106" y="1650"/>
         </scene>
-        <!--View Controller-->
+        <!--Mine View Controller-->
         <scene sceneID="TXN-go-RAu">
             <objects>
-                <viewController id="1sc-E7-ubW" sceneMemberID="viewController">
+                <viewController id="1sc-E7-ubW" customClass="MineViewController" customModule="JiuCaiTong2_0_Swift_" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="ehL-MF-Vjs"/>
                         <viewControllerLayoutGuide type="bottom" id="aPf-tj-Epy"/>
