--- a/JiuCaiTong2.0(Swift)/Base.lproj/Main.storyboard
+++ b/JiuCaiTong2.0(Swift)/Base.lproj/Main.storyboard
@@ -108,7 +108,7 @@
                     <view key="view" contentMode="scaleToFill" id="c7g-hO-iuU">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="0.36488527669999998" blue="0.2240839744" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                     </view>
                     <navigationItem key="navigationItem" id="Kgf-l5-pO9" customClass="Home"/>
                 </viewController>
